--- a/order.html
+++ b/order.html
@@ -39,15 +39,15 @@
                     <div class="collapse navbar-collapse ps-4" id="navbarcollapse">
                         <ul class="nav nav-pills card-header-pills ">
                             <li class="nav-item">
-                                <a class="nav-link " style="color: black;" href="/index.html">Home</a>
+                                <a class="nav-link " style="color: black;" href="index.html" onclick="window.open('index.html','_self');" >Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active " href="/order.html">Pesan
+                                <a class="nav-link active " href="order.html" onclick="window.open('order.html','_self');" >Pesan
                                     Desain</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link " style="color: black;"
-                                    href="/help.html">help</a>
+                                href="help.html" onclick="window.open('help.html','_self');" >help</a>
                             </li>
                         </ul>
 
