--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="icon" href="/HIMASTER.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="" type="image/gif" sizes="16x16">
     <title>HIMASTER | Pesanan Media Grafis | home</title>
 
     <!-- start CSS pada Carousel Gambar slide -->
