--- a/order.html
+++ b/order.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="/HIMASTER.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="/images/HIMASTER.png" type="image/gif" sizes="16x16">
     <title>HIMASTER | Pesanan Media Grafis | order</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
