--- a/order.html
+++ b/order.html
@@ -26,7 +26,7 @@
                 <div class="container-fluid ">
                     <nav class="navbar navbar-expand-sm navbar-light">
                         <a class="navbar-brand" href="#">
-                            <img src="/HIMASTER.png" width="30" height="30"
+                            <img src="/images/HIMASTER.png" width="30" height="30"
                                 class="d-inline-block align-top" alt="logo_himaster">
                             <span class="d-none d-md-inline"><b style=" font-weight: 600;">Pesanan Media
                                     Grafis</b></span>
