--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="icon" href="" type="image/gif" sizes="16x16">
+    <link rel="icon" href="images/HIMASTER.png" type="image/gif" sizes="16x16">
     <title>HIMASTER | Pesanan Media Grafis | home</title>
 
     <!-- start CSS pada Carousel Gambar slide -->
@@ -158,7 +158,7 @@
                 <div class="container-fluid ">
                     <nav class="navbar navbar-expand-sm navbar-light">
                         <a class="navbar-brand" href="#">
-                            <img src="/HIMASTER.png" width="30" height="30" class="d-inline-block align-top"
+                            <img src="images/HIMASTER.png" width="30" height="30" class="d-inline-block align-top"
                                 alt="logo_himaster">
                             <span class="d-none d-md-inline "> <b style=" font-weight: 600;">Pesanan Media Grafis</b>
                             </span>
@@ -230,15 +230,15 @@
                                 data-bs-ride="carousel" data-bs-interval="2000">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="/2018-01-22.jpg?text=Image+1" class="d-block w-100" alt="..."
+                                        <img src="images/2018-01-22.jpg?text=Image+1" class="d-block w-100" alt="..."
                                             style="object-fit: cover;width: 500px;height: 400px;">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/_MG_9740.JPG?text=Image+2" class="d-block w-100" alt="..."
+                                        <img src="images/_MG_9740.JPG?text=Image+2" class="d-block w-100" alt="..."
                                             style="object-fit: cover;width: 500px;height: 400px;">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/IMG_9324.JPG?text=Image+3" class="d-block w-100" alt="..."
+                                        <img src="images/IMG_9324.JPG?text=Image+3" class="d-block w-100" alt="..."
                                             style="object-fit: cover;width: 500px; height: 400px;">
                                     </div>
                                 </div>
@@ -268,7 +268,7 @@
             <!-- star get started button pesanan -->
             <div class="d-grid gap-2 d-md-flex justify-content-center">
                 <!-- <button class="btn btn-primary me-md-2" type="button">Button</button> -->
-                <a href="/order.html">
+                <a href="order.html" onclick="window.open('order.html','_self');">
                     <button class="btn btn-secondary btn-lg" type="button">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                             class="bi bi-envelope-plus" viewBox="0 0 16 16">
@@ -311,7 +311,7 @@
                         <div class="card mb-3 " style="max-width: 800px;  margin-left: auto; margin-right: auto;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="/Screenshot 2023-04-16 104106.jpg" class="img-fluid rounded-start"
+                                    <img src="images/Screenshot 2023-04-16 104106.jpg" class="img-fluid rounded-start"
                                         alt="Caution!">
                                 </div>
                                 <div class="col-md-8">
@@ -325,7 +325,7 @@
                                                 bisa tekan tombol help untuk lebih lanjut</small></p>
                                         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                                             <!-- <button class="btn btn-primary me-md-2" type="button">Button</button> -->
-                                            <a href="/help.html">
+                                            <a href="help.html" onclick="window.open('help.html','_self');">
 
                                                 <button class="btn btn-primary" type="button">help</button>
                                             </a>
