--- a/order.html
+++ b/order.html
@@ -69,7 +69,7 @@
                             <div class="card-body ">
                                 <div class="text-center">
                                     <div class="text-center">
-                                        <img src="/HIMASTER.png" class="rounded"
+                                        <img src="images/HIMASTER.png" class="rounded"
                                             alt="Logo_Himaster" width="25%" height="auto">
                                     </div>
                                 </div>
