--- a/help.html
+++ b/help.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="/HIMASTER.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="images/HIMASTER.png" type="image/gif" sizes="16x16">
     <title>HIMASTER | Pesanan Media Grafis | help</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,7 +25,7 @@
                     <!-- <h4 class="mt-2">GFG</h4> -->
                     <nav class="navbar navbar-expand-sm navbar-light">
                         <a class="navbar-brand" href="#">
-                            <img src="/HIMASTER.png" width="30" height="30"
+                            <img src="images/HIMASTER.png" width="30" height="30"
                                 class="d-inline-block align-top" alt="logo_himaster">
                             <span class="d-none d-md-inline "> <b style=" font-weight: 600;">Pesanan Media Grafis</b>
                             </span>
@@ -66,7 +66,7 @@
                             <div class="card mb-3 " style="max-width: 800px;  margin-left: auto; margin-right: auto;">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="/laptop1.png"
+                                        <img src="images/laptop1.png"
                                             class="img-fluid rounded-start" alt="Caution!" width="500" height="500">
                                     </div>
                                     <div class="col-md-8">
