--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                             style="object-fit: cover;width: 500px;height: 400px;">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="images/_MG_9740.JPG?text=Image+2" class="d-block w-100" alt="..."
+                                        <img src="images/MG_970.JPG?text=Image+2" class="d-block w-100" alt="..."
                                             style="object-fit: cover;width: 500px;height: 400px;">
                                     </div>
                                     <div class="carousel-item">
